--- a/Intro_web/index.html
+++ b/Intro_web/index.html
@@ -10,5 +10,41 @@
     <h1>Tienda de naranjas 🍊</h1>
     <p>Compra naranjas en descuento</p>
     <a href="https://www.jango.com">Click aquí para comprar</a>
+    <a href= "https://www.Google.com">Gloogle</a>
+
+<!--alt + shift + a-->
+<!-- hr: horizontal row / linea que divide secciones -->
+ <!-- br: break / salto de línea -->
+    <br><br>
+    <hr>
+    <br><br>
+
+    <img src="https://static.soapcentral.com/editor/2024/10/ce100-17286510940673.jpg" alt="Portada serie Teacup" width="500"> 
+
+    <div>
+        <h1>Lista de series 🎞<h1>
+
+    <!-- Lista ordenada -->
+        <ol>
+        <li>
+           <a href="https://www.justwatch.com/mx/serie/from" target="_blank">From</a> 
+        </li>
+        <li>
+            <a href="https://www.justwatch.com/mx/serie/pinguino" target="_blank">El pingüino</a> 
+        </li>
+        <li>
+            <a href="https://www.justwatch.com/mx/serie/teacup" target="blank">Teacup</a>
+        </li>
+        <li>
+           <a href="https://www.justwatch.com/mx/serie/special-ops-lioness" target="_blank">Lioness</a> 
+        </li>
+        <li>
+            <a href="https://www.justwatch.com/mx/serie/grotesquerie" target="_blank">Grotesquerie</a>
+        </li>
+
+
+        </ol>
+    </div>
+
 </body>
 </html>
